--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
   header div {
     width: 120px;
     margin: auto;
-    background-image: linear-gradient(90deg, #C91842 0%, #5CC2E2 100%), linear-gradient(0deg, #262629, #262629);
+    background-image: linear-gradient(90deg, #C91842 0%, #5CC2E2 100%);
     border-radius: 50%;
     display: flex;
     padding: 4px;
@@ -58,8 +58,7 @@
 
   section {
     color: white;
-    background-image: linear-gradient(90deg, #C91842 0%, #5CC2E2 100%),
-    linear-gradient(0deg, #262629, #262629);
+    background-image: linear-gradient(90deg, #C91842 0%, #5CC2E2 100%);
     padding-top: 4px;
     border-radius: 10px;
   }
